# finassist

./: .env.example  .gitignore  README.md  bigquery.ipynb  env.example  play.ipynb  play.py  pyproject.toml  requirements.txt  tlables.txt
docs/: README.md  SUMMARY.md  agent_specs.md  db_specs.md  diagrama_seq.md  plan.md
docs/agents/: README.md
docs/agents/main-agent/: agent.md
docs/database/: overview.md
docs/db/: overview.md
docs/getting-started/: configuration.md  installation.md  running.md
financial_assist/: agent.py  prompts.py  tools.py
financial_assist/subagents/bigquery/: __init__.py  tools.py
financial_assist/subagents/categorizer/: agent.py  prompts.py  tools.py
financial_assist/subagents/data_extractor/: agent.py  prompt.py
financial_assist/subagents/parser_agent/: agent.py  prompts.py
financial_assist/subagents/recorded/: agent.py  prompts.py  tools.py
financial_assist/utils/: utils.py
finassist/: __init__.py  agent.py  demo.py  prompt.py  test_core.py  test_final.py  test_functions.py  test_structure.py
finassist/profiles/: transaction_template.json
finassist/shared_libraries/: __init__.py  constants.py  types.py
finassist/sub_agents/: __init__.py
finassist/sub_agents/consulting/: __init__.py  agent.py  prompt.py
finassist/sub_agents/transaction/: __init__.py  agent.py  prompt.py  tools.py
finassist/subagents/data_manager/: agent.py  prompt.py
finassist/subagents/question/: agent.py  (+1 more)
finassist/tools/: __init__.py  categorization.py  validation.py
finassist/utils/: database.py  utils.py
notebooks/: bigquery.ipynb
(+9 files in other folders)
