[project]
name = "finassist"
version = "0.1.0"
description = ""
authors = [
    {name = "MaxGalindo150",email = "maximilianogalindo7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk (>=0.5.0,<0.6.0)",
    "litellm (>=1.70.0,<2.0.0)",
    "immutabledict (>=4.2.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "db-dtypes (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
